Fix bug: gap between header and nav
when header was hidden - generating top of nav dinamically

--- a/style.css
+++ b/style.css
@@ -154,7 +154,6 @@ footer {
 		justify-content: flex-start;
 		position: fixed;
 		gap: 3dvh;
-		top: 3.5rem;
 		left: 0;
 		width: 100%;
 		height: 100%;
